[gd_scene load_steps=3 format=2]

[ext_resource path="res://Property.gd" type="Script" id=1]
[ext_resource path="res://PropertyFont.tres" type="DynamicFont" id=2]

[node name="Property" type="Node2D"]
script = ExtResource( 1 )

[node name="MainBackground" type="ColorRect" parent="."]
margin_right = 50.0
margin_bottom = 100.0
color = Color( 0.890196, 0.882353, 0.537255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyColor" type="ColorRect" parent="."]
margin_right = 50.0
margin_bottom = 17.0
color = Color( 0.937255, 0.192157, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyName" type="Label" parent="."]
margin_left = 1.75
margin_top = 19.25
margin_right = 69.75
margin_bottom = 33.25
rect_scale = Vector2( 0.68, 0.68 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Boardwalk"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyPrice" type="Label" parent="."]
margin_left = 4.37939
margin_top = 82.1354
margin_right = 46.3794
margin_bottom = 96.1354
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "200"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Houses" type="Node2D" parent="."]

[node name="House1" type="Node2D" parent="Houses"]
visible = false
position = Vector2( -5, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House1"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 16.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House1"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 16.6352
margin_bottom = 12.1757
color = Color( 0.25098, 0.572549, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House2" type="Node2D" parent="Houses"]
visible = false
position = Vector2( 7, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House2"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 16.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House2"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 16.6352
margin_bottom = 12.1757
color = Color( 0.25098, 0.572549, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House3" type="Node2D" parent="Houses"]
visible = false
position = Vector2( 19, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House3"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 16.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House3"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 16.6352
margin_bottom = 12.1757
color = Color( 0.25098, 0.572549, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House4" type="Node2D" parent="Houses"]
visible = false
position = Vector2( 31, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House4"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 16.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House4"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 16.6352
margin_bottom = 12.1757
color = Color( 0.25098, 0.572549, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House5" type="Node2D" parent="Houses"]
visible = false
position = Vector2( -2, 0 )

[node name="ColorRect2" type="ColorRect" parent="Houses/House5"]
margin_left = 6.83794
margin_top = 3.27032
margin_right = 46.8379
margin_bottom = 13.2703
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Houses/House5"]
margin_left = 7.13524
margin_top = 2.67571
margin_right = 47.1352
margin_bottom = 12.1757
color = Color( 0.533333, 0.0862745, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropClick" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 50.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="PropClick" to="." method="_on_PropClick_button_down"]
